--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - 3069:3069
     env_file:
       - .env
-networks:
-  default:
-    name: cv-svelte_default
-    external: true
+#networks:
+#  default:
+#    name: cv-svelte_default
+#    external: true
